@@ -4,11 +4,12 @@ import lemon.jpizza.errors.Error;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.stream.Collectors;
 
 public class RunTest {
     public static void main(String[] args) throws IOException {
-        String text = Files.readString(Path.of("UnitTest.devp"));
+        String text = Files.lines(Paths.get("UnitTest.devp")).collect(Collectors.joining("\n"));
 
         Error e = Shell.compile("UnitTest.devp", text, "UnitTest.jbox");
         if (e != null) {
