@@ -1,15 +1,11 @@
 package lemon.jpizza.nodes.definitions;
 
 import lemon.jpizza.JPType;
-import lemon.jpizza.contextuals.Context;
-import lemon.jpizza.errors.RTError;
-import lemon.jpizza.generators.Interpreter;
 import lemon.jpizza.nodes.Node;
-import lemon.jpizza.objects.Obj;
-import lemon.jpizza.results.RTResult;
 import lemon.jpizza.Token;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class AttrAssignNode extends Node {
@@ -24,22 +20,6 @@ public class AttrAssignNode extends Node {
         jptype = JPType.AttrAssign;
     }
 
-    public RTResult visit(Interpreter inter, Context context) {
-        RTResult res = new RTResult();
-
-        String varName = (String) var_name_tok.value;
-        Obj value = res.register(inter.visit(value_node, context));
-        if (res.shouldReturn()) return res;
-
-        RTError.ErrorDetails v = context.symbolTable.setattr(varName, value);
-        if (v != null) return res.failure(v.build(
-                pos_start, pos_end,
-                context
-        ));
-
-        return res.success(value);
-    }
-
     @Override
     public Node optimize() {
         return new AttrAssignNode(var_name_tok, value_node.optimize());
@@ -47,7 +27,7 @@ public class AttrAssignNode extends Node {
 
     @Override
     public List<Node> getChildren() {
-        return new ArrayList<>(List.of(value_node));
+        return new ArrayList<>(Collections.singletonList(value_node));
     }
 
     @Override
