@@ -1,14 +1,10 @@
 package lemon.jpizza.nodes.expressions;
 
 import lemon.jpizza.JPType;
-import lemon.jpizza.contextuals.Context;
-import lemon.jpizza.contextuals.SymbolTable;
-import lemon.jpizza.generators.Interpreter;
 import lemon.jpizza.nodes.Node;
-import lemon.jpizza.objects.primitives.Null;
-import lemon.jpizza.results.RTResult;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class ScopeNode extends Node {
@@ -24,22 +20,6 @@ public class ScopeNode extends Node {
         jptype = JPType.Scope;
     }
 
-    public RTResult visit(Interpreter inter, Context context) {
-        Context scopeContext = new Context(
-                scopeName == null ? context.displayName : scopeName,
-                context,
-                statements.pos_start
-        );
-        scopeContext.symbolTable = new SymbolTable(context.symbolTable);
-
-        RTResult res = new RTResult();
-        res.register(inter.visit(statements, scopeContext));
-        if (res.shouldReturn() && res.funcReturn == null) {
-            return res;
-        }
-        return res.success(res.funcReturn != null ? res.funcReturn : new Null());
-    }
-
     @Override
     public Node optimize() {
         return new ScopeNode(scopeName, statements.optimize());
@@ -47,7 +27,7 @@ public class ScopeNode extends Node {
 
     @Override
     public List<Node> getChildren() {
-        return new ArrayList<>(List.of(statements));
+        return new ArrayList<>(Collections.singletonList(statements));
     }
 
     @Override
