@@ -4,6 +4,7 @@ import lemon.jpizza.JPType;
 import lemon.jpizza.nodes.Node;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class SpreadNode extends Node {
@@ -22,7 +23,7 @@ public class SpreadNode extends Node {
 
     @Override
     public List<Node> getChildren() {
-        return new ArrayList<>(List.of(internal));
+        return new ArrayList<>(Collections.singletonList(internal));
     }
 
     @Override
