@@ -1,14 +1,10 @@
 package lemon.jpizza.nodes.expressions;
 
 import lemon.jpizza.JPType;
-import lemon.jpizza.contextuals.Context;
-import lemon.jpizza.errors.RTError;
-import lemon.jpizza.generators.Interpreter;
 import lemon.jpizza.nodes.Node;
-import lemon.jpizza.objects.Obj;
-import lemon.jpizza.results.RTResult;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class ThrowNode extends Node {
@@ -22,25 +18,6 @@ public class ThrowNode extends Node {
         jptype = JPType.Throw;
     }
 
-    public RTResult visit(Interpreter inter, Context context) {
-        RTResult res = new RTResult();
-
-        Obj err = res.register(inter.visit(thrown, context));
-        if (res.error != null)
-            return res;
-
-        Obj type = res.register(inter.visit(throwType, context));
-        if (res.error != null)
-            return res;
-
-        return res.failure(new RTError(
-                type.toString(),
-                pos_start, pos_end,
-                err.toString(),
-                context
-        ));
-    }
-
     @Override
     public Node optimize() {
         return new ThrowNode(throwType.optimize(), thrown.optimize());
@@ -48,7 +25,7 @@ public class ThrowNode extends Node {
 
     @Override
     public List<Node> getChildren() {
-        return new ArrayList<>(List.of(throwType, thrown));
+        return new ArrayList<>(Arrays.asList(throwType, thrown));
     }
 
     @Override
