@@ -2,15 +2,8 @@ package lemon.jpizza.nodes.operations;
 
 import lemon.jpizza.*;
 import lemon.jpizza.compiler.vm.VM;
-import lemon.jpizza.contextuals.Context;
-import lemon.jpizza.errors.RTError;
-import lemon.jpizza.generators.Interpreter;
 import lemon.jpizza.nodes.Node;
 import lemon.jpizza.nodes.values.*;
-import lemon.jpizza.objects.Obj;
-import lemon.jpizza.objects.primitives.Null;
-import lemon.jpizza.objects.primitives.Num;
-import lemon.jpizza.results.RTResult;
 
 import java.util.*;
 
@@ -32,99 +25,6 @@ public class BinOpNode extends Node {
 
     public String toString() { return String.format("(%s, %s, %s)", left_node, op_tok, right_node); }
 
-    public RTResult visit(Interpreter inter, Context context) {
-        RTResult res = new RTResult();
-        Pair<Obj, RTError> ret;
-
-        Operations.OP op = Constants.tto.get(op_tok);
-
-        if (op_tok == TokenType.Colon) {
-            boolean leftfailed = false;
-            boolean rightfailed = false;
-            Obj left = res.register(inter.visit(left_node, context));
-            if (res.shouldReturn()) leftfailed = true;
-            Obj right = res.register(inter.visit(right_node, context));
-            if (res.shouldReturn()) rightfailed = true;
-            if (leftfailed || left.jptype == JPType.Null) {
-                return res.success(rightfailed ? new Null() : right);
-            }
-            else return res.success(left);
-        }
-
-        Obj left = res.register(inter.visit(left_node, context));
-        if (res.shouldReturn()) return res;
-        Obj right = res.register(inter.visit(right_node, context));
-        if (res.shouldReturn()) return res;
-
-        if (op_tok == TokenType.FatArrow) {
-            Pair<Obj, RTError> pair = left.mutate(right);
-            if (pair.b != null) return res.failure(pair.b);
-            return res.success(pair.a);
-        }
-
-        if (Arrays.asList(TokenType.TildeAmpersand, TokenType.TildePipe, TokenType.TildeCaret, TokenType.LeftTildeArrow,
-                        TokenType.TildeTilde, TokenType.RightTildeArrow)
-                .contains(op_tok)) {
-            if (left.jptype != JPType.Number || left.floating()) return res.failure(RTError.Type(
-                    left.get_start(), left.get_end(),
-                    "Left operand must be an integer",
-                    context
-            ));
-            if (right.jptype != JPType.Number || right.floating()) return res.failure(RTError.Type(
-                    right.get_start(), right.get_end(),
-                    "Right operand must be an integer",
-                    context
-            ));
-
-            long a = Double.valueOf(left.number).longValue();
-            long b = Double.valueOf(right.number).longValue();
-
-            return res.success(new Num(switch (op_tok) {
-                case TildeAmpersand -> a & b;
-                case TildePipe -> a | b;
-                case TildeCaret -> a ^ b;
-                case LeftTildeArrow -> a << b;
-                case TildeTilde -> a >> b;
-                case RightTildeArrow -> a >>> b;
-                default -> -1;
-            }));
-        }
-
-        if (op_tok == TokenType.RightAngle) {
-            ret = right.lt(left);
-        }
-        else if (op_tok == TokenType.GreaterEquals) {
-            ret = right.lte(left);
-        }
-        else ret = switch (op) {
-            case ADD -> left.add(right);
-            case SUB -> left.sub(right);
-            case MUL -> left.mul(right);
-            case DIV -> left.div(right);
-            case FASTPOW -> left.fastpow(right);
-            case MOD -> left.mod(right);
-
-            case EQ -> left.eq(right);
-            case NE -> left.ne(right);
-            case LT -> left.lt(right);
-            case LTE -> left.lte(right);
-            case ALSO -> left.also(right);
-            case INCLUDING -> left.including(right);
-
-            case APPEND -> left.append(right);
-            case EXTEND -> left.extend(right);
-            case POP -> left.pop(right);
-            case REMOVE -> left.remove(right);
-            case BRACKET -> left.bracket(right);
-
-            case GET -> left.get(right);
-
-            default -> new Pair<>(new Null(), null);
-        };
-        if (ret.b != null) return res.failure(ret.b);
-        return res.success(ret.a != null ? ret.a.set_pos(pos_start, pos_end).set_context(context) : new Null());
-    }
-
     /*
      * Optimizable operands:
      * - & => Return true if both operands are true
@@ -145,116 +45,116 @@ public class BinOpNode extends Node {
             Node opt = new BinOpNode(left, op_tok, right).setStatic(false);
             if (left.getClass() != right.getClass())
                 return opt;
-            return switch (op_tok) {
-                case Ampersand -> new BooleanNode(left.asBoolean() && right.asBoolean(), pos_start, pos_end);
-                case Pipe -> new BooleanNode(left.asBoolean() || right.asBoolean(), pos_start, pos_end);
+            switch (op_tok) {
+                case Ampersand: return new BooleanNode(left.asBoolean() && right.asBoolean(), pos_start, pos_end);
+                case Pipe: return new BooleanNode(left.asBoolean() || right.asBoolean(), pos_start, pos_end);
 
-                case TildeAmpersand -> new NumberNode(VM.bitOp(
+                case TildeAmpersand: return new NumberNode(VM.bitOp(
                         left.asNumber(),
                         right.asNumber(),
                         (a, b) -> a & b
                 ), pos_start, pos_end);
-                case TildePipe -> new NumberNode(VM.bitOp(
+                case TildePipe: return new NumberNode(VM.bitOp(
                         left.asNumber(),
                         right.asNumber(),
                         (a, b) -> a | b
                 ), pos_start, pos_end);
-                case TildeCaret -> new NumberNode(VM.bitOp(
+                case TildeCaret: return new NumberNode(VM.bitOp(
                         left.asNumber(),
                         right.asNumber(),
                         (a, b) -> a ^ b
                 ), pos_start, pos_end);
-                case LeftTildeArrow -> new NumberNode(VM.bitOp(
+                case LeftTildeArrow: return new NumberNode(VM.bitOp(
                         left.asNumber(),
                         right.asNumber(),
                         (a, b) -> a << b
                 ), pos_start, pos_end);
-                case TildeTilde -> new NumberNode(VM.bitOp(
+                case TildeTilde: return new NumberNode(VM.bitOp(
                         left.asNumber(),
                         right.asNumber(),
                         (a, b) -> a >> b
                 ), pos_start, pos_end);
-                case RightTildeArrow -> new NumberNode(VM.bitOp(
+                case RightTildeArrow: return new NumberNode(VM.bitOp(
                         left.asNumber(),
                         right.asNumber(),
                         (a, b) -> a >>> b
                 ), pos_start, pos_end);
 
-                case Plus -> {
+                case Plus: {
                     if (left instanceof NumberNode)
-                        yield new NumberNode(left.asNumber() + right.asNumber(), pos_start, pos_end);
+                        return new NumberNode(left.asNumber() + right.asNumber(), pos_start, pos_end);
                     else if (left instanceof StringNode)
-                        yield new StringNode(left.asString() + right.asString(), pos_start, pos_end);
+                        return new StringNode(left.asString() + right.asString(), pos_start, pos_end);
                     else if (left instanceof ListNode) {
                         List<Node> list = new ArrayList<>();
                         list.addAll(left.asList());
                         list.addAll(right.asList());
-                        yield new ListNode(list, pos_start, pos_end);
+                        return new ListNode(list, pos_start, pos_end);
                     }
                     else if (left instanceof DictNode) {
                         Map<Node, Node> map = new HashMap<>();
                         map.putAll(left.asMap());
                         map.putAll(right.asMap());
-                        yield new DictNode(map, pos_start, pos_end);
+                        return new DictNode(map, pos_start, pos_end);
                     }
-                    yield opt;
+                    return opt;
                 }
-                case Minus -> left instanceof NumberNode ? new NumberNode(left.asNumber() - right.asNumber(), pos_start, pos_end) : opt;
-                case Star -> left instanceof NumberNode ? new NumberNode(left.asNumber() * right.asNumber(), pos_start, pos_end) : opt;
-                case Slash -> left instanceof NumberNode ? new NumberNode(left.asNumber() / right.asNumber(), pos_start, pos_end) : opt;
-                case Caret -> left instanceof NumberNode ? new NumberNode(Math.pow(left.asNumber(), right.asNumber()), pos_start, pos_end) : opt;
-                case Percent -> left instanceof NumberNode ? new NumberNode(left.asNumber() % right.asNumber(), pos_start, pos_end) : opt;
+                case Minus: return left instanceof NumberNode ? new NumberNode(left.asNumber() - right.asNumber(), pos_start, pos_end) : opt;
+                case Star: return left instanceof NumberNode ? new NumberNode(left.asNumber() * right.asNumber(), pos_start, pos_end) : opt;
+                case Slash: return left instanceof NumberNode ? new NumberNode(left.asNumber() / right.asNumber(), pos_start, pos_end) : opt;
+                case Caret: return left instanceof NumberNode ? new NumberNode(Math.pow(left.asNumber(), right.asNumber()), pos_start, pos_end) : opt;
+                case Percent: return left instanceof NumberNode ? new NumberNode(left.asNumber() % right.asNumber(), pos_start, pos_end) : opt;
 
-                case EqualEqual -> new BooleanNode(left.equals(right), pos_start, pos_end);
-                case BangEqual -> new BooleanNode(!left.equals(right), pos_start, pos_end);
-                case LeftAngle -> new BooleanNode(left.asNumber() < right.asNumber(), pos_start, pos_end);
-                case LessEquals -> new BooleanNode(left.asNumber() <= right.asNumber(), pos_start, pos_end);
-                case GreaterEquals -> new BooleanNode(left.asNumber() >= right.asNumber(), pos_start, pos_end);
-                case RightAngle -> new BooleanNode(left.asNumber() > right.asNumber(), pos_start, pos_end);
+                case EqualEqual: return new BooleanNode(left.equals(right), pos_start, pos_end);
+                case BangEqual: return new BooleanNode(!left.equals(right), pos_start, pos_end);
+                case LeftAngle: return new BooleanNode(left.asNumber() < right.asNumber(), pos_start, pos_end);
+                case LessEquals: return new BooleanNode(left.asNumber() <= right.asNumber(), pos_start, pos_end);
+                case GreaterEquals: return new BooleanNode(left.asNumber() >= right.asNumber(), pos_start, pos_end);
+                case RightAngle: return new BooleanNode(left.asNumber() > right.asNumber(), pos_start, pos_end);
 
-                default -> opt;
-            };
+                default: return opt;
+            }
         }
         return this;
     }
 
     @Override
     public List<Node> getChildren() {
-        return new ArrayList<>(List.of(left_node, right_node));
+        return new ArrayList<>(Arrays.asList(left_node, right_node));
     }
 
     @Override
     public String visualize() {
-        return switch (op_tok) {
-            case Ampersand -> "&&";
-            case Pipe -> "||";
+        switch (op_tok) {
+            case Ampersand: return "&&";
+            case Pipe: return "||";
 
-            case FatArrow -> "=>";
+            case FatArrow: return "=>";
 
-            case Colon -> ":";
+            case Colon: return ":";
 
-            case TildeAmpersand -> "&";
-            case TildePipe -> "|";
-            case TildeCaret -> "^";
-            case LeftTildeArrow -> "<<";
-            case TildeTilde -> ">>";
-            case RightTildeArrow -> ">>>";
+            case TildeAmpersand: return "&";
+            case TildePipe: return "|";
+            case TildeCaret: return "^";
+            case LeftTildeArrow: return "<<";
+            case TildeTilde: return ">>";
+            case RightTildeArrow: return ">>>";
 
-            case Plus -> "+";
-            case Minus -> "-";
-            case Star -> "*";
-            case Slash -> "/";
-            case Caret -> "pow";
-            case Percent -> "%";
+            case Plus: return "+";
+            case Minus: return "-";
+            case Star: return "*";
+            case Slash: return "/";
+            case Caret: return "pow";
+            case Percent: return "%";
 
-            case EqualEqual -> "==";
-            case BangEqual -> "!=";
-            case LeftAngle -> "<";
-            case LessEquals -> "<=";
-            case GreaterEquals -> ">=";
-            case RightAngle -> ">";
+            case EqualEqual: return "==";
+            case BangEqual: return "!=";
+            case LeftAngle: return "<";
+            case LessEquals: return "<=";
+            case GreaterEquals: return ">=";
+            case RightAngle: return ">";
 
-            default -> "";
-        };
+            default: return "";
+        }
     }
 }
