@@ -1,14 +1,10 @@
 package lemon.jpizza.nodes.values;
 
 import lemon.jpizza.JPType;
-import lemon.jpizza.contextuals.Context;
-import lemon.jpizza.errors.RTError;
-import lemon.jpizza.generators.Interpreter;
 import lemon.jpizza.nodes.Node;
-import lemon.jpizza.objects.Obj;
-import lemon.jpizza.results.RTResult;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 
@@ -21,22 +17,6 @@ public class BytesNode extends Node {
         jptype = JPType.Bytes;
     }
 
-    public RTResult visit(Interpreter inter, Context context) {
-        RTResult res = new RTResult();
-
-        Obj toBytes = res.register(inter.visit(this.toBytes, context));
-        if (res.error != null) return res;
-
-        Obj bytearrq = toBytes.bytes();
-        if (bytearrq.jptype != JPType.Bytes) return res.failure(RTError.Conversion(
-                bytearrq.get_start(), bytearrq.get_end(),
-                "Object has no {BYTE-ARRAY} form",
-                context
-        ));
-
-        return new RTResult().success(bytearrq);
-    }
-
     @Override
     public Node optimize() {
         return new BytesNode(toBytes.optimize());
@@ -44,7 +24,7 @@ public class BytesNode extends Node {
 
     @Override
     public List<Node> getChildren() {
-        return new ArrayList<>(List.of(toBytes));
+        return new ArrayList<>(Collections.singletonList(toBytes));
     }
 
     @Override
